--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,13 @@
             <artifactId>tio-core</artifactId>
             <version>1.6.9.v20170408-RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
+            <version>1.2.37</version>
         </dependency>
+
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
